syntax = "proto3";

option java_package = "com.stabledata.synchro";
option java_multiple_files = true;

service SynchroGrpcService {
  rpc GetData (DataRequest) returns (DataResponse);
}

message DataRequest {
  string id = 1;
}

message DataResponse {
  string data = 1;
}